--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -28,8 +28,10 @@ jobs:
       run: ./gradlew assembleDebug assembleRelease --stacktrace
       
     - name: Sign Release APK
-      uses: r0adkll/sign-android-release@v1
       id: sign_app
+      continue-on-error: true
+      if: ${{ secrets.SIGNING_KEY != '' }}
+      uses: r0adkll/sign-android-release@v1
       with:
         releaseDirectory: app/build/outputs/apk/release
         signingKeyBase64: ${{ secrets.SIGNING_KEY }}
@@ -52,10 +54,25 @@ jobs:
       run: |
         VERSION=${{ steps.version.outputs.version }}
         BUILD=${{ steps.version.outputs.build }}
-        mv app/build/outputs/apk/debug/app-debug.apk app/build/outputs/apk/debug/HSRGraphicDroid-v${VERSION}-build${BUILD}-debug.apk || true
-        mv app/build/outputs/apk/release/app-release-unsigned.apk app/build/outputs/apk/release/HSRGraphicDroid-v${VERSION}-build${BUILD}-release-unsigned.apk || true
+        
+        # Rename Debug APK
+        if [ -f "app/build/outputs/apk/debug/app-debug.apk" ]; then
+          mv app/build/outputs/apk/debug/app-debug.apk app/build/outputs/apk/debug/HSRGraphicDroid-v${VERSION}-build${BUILD}-debug.apk
+          echo "✅ Debug APK renamed"
+        fi
+        
+        # Rename Release APK (unsigned)
+        if [ -f "app/build/outputs/apk/release/app-release-unsigned.apk" ]; then
+          mv app/build/outputs/apk/release/app-release-unsigned.apk app/build/outputs/apk/release/HSRGraphicDroid-v${VERSION}-build${BUILD}-release-unsigned.apk
+          echo "✅ Release Unsigned APK renamed"
+        fi
+        
+        # Copy signed APK if signing was successful
         if [ -f "${{ steps.sign_app.outputs.signedReleaseFile }}" ]; then
           cp ${{ steps.sign_app.outputs.signedReleaseFile }} app/build/outputs/apk/release/HSRGraphicDroid-v${VERSION}-build${BUILD}-release-signed.apk
+          echo "✅ Release Signed APK copied"
+        else
+          echo "⚠️ Signed APK not available, will upload unsigned version"
         fi
         
     - name: Create Pre-Release
@@ -73,8 +90,10 @@ jobs:
           **Branch:** ${{ github.ref_name }}
           
           ### 📦 Downloads
-          - **Debug APK**: For testing with detailed logs
+          - **Debug APK**: For testing with detailed logs (recommended for development)
           - **Release APK**: Optimized production build
+          
+          > ⚠️ **Note**: APK is unsigned. You need to sign it manually or install with allowing unknown sources.
           
           ### ⚠️ Pre-Release Notice
           This is an automated pre-release build. It may contain bugs or unstable features.
