feat: Add new drawable resources and layout for game preferences
- Added vector drawable icons: ic_add, ic_export, ic_file, ic_language, ic_play, ic_share, ic_videocam_off, ic_volume_off.
- Implemented activity_game_preferences.xml layout with a CoordinatorLayout, AppBarLayout, and NestedScrollView.
- Included loading overlay with CircularProgressIndicator.
- Created user info card and language settings card with chip groups for language selection.
- Added video and audio blacklist cards with RecyclerViews for displaying blocked items.
- Introduced item_blacklist.xml layout for individual blacklist items.
- Defined file_paths.xml for cache path configuration.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,7 +36,7 @@
         <activity
             android:name=".ui.SettingsActivity"
             android:exported="false"
-            android:configChanges="locale|layoutDirection|uiMode"
+            android:configChanges="locale|layoutDirection|uiMode|screenSize|smallestScreenSize|screenLayout"
             android:theme="@style/Theme.HsrGraphicDroid.Settings"
             android:parentActivityName=".ui.MainActivity"/>
         
@@ -45,6 +45,22 @@
             android:exported="false"
             android:configChanges="locale|layoutDirection|uiMode"
             android:parentActivityName=".ui.MainActivity"/>
+        
+        <activity
+            android:name=".ui.GamePreferencesActivity"
+            android:exported="false"
+            android:configChanges="locale|layoutDirection|uiMode"
+            android:parentActivityName=".ui.MainActivity"/>
+
+        <provider
+            android:name="androidx.core.content.FileProvider"
+            android:authorities="${applicationId}.fileprovider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"/>
+        </provider>
             
     </application>
 
