--- a/.github/workflows/android-build.yml
+++ b/.github/workflows/android-build.yml
@@ -23,22 +23,49 @@ jobs:
         
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
+
+    - name: Decode Keystore
+      if: ${{ secrets.SIGNING_KEY != '' }}
+      run: |
+        echo "${{ secrets.SIGNING_KEY }}" | base64 -d > app/keystore.jks
+        echo "✅ Keystore decoded successfully"
       
-    - name: Build with Gradle
-      run: ./gradlew assembleDebug assembleRelease --stacktrace
+    - name: Build Release APK with Signing
+      if: ${{ secrets.SIGNING_KEY != '' }}
+      run: |
+        ./gradlew assembleRelease \
+          -Pandroid.injected.signing.store.file=${{ github.workspace }}/app/keystore.jks \
+          -Pandroid.injected.signing.store.password=${{ secrets.KEY_STORE_PASSWORD }} \
+          -Pandroid.injected.signing.key.alias=${{ secrets.ALIAS }} \
+          -Pandroid.injected.signing.key.password=${{ secrets.KEY_PASSWORD }} \
+          --stacktrace
+        echo "✅ Signed Release APK built"
+        
+    - name: Build Release APK (Unsigned fallback)
+      if: ${{ secrets.SIGNING_KEY == '' }}
+      run: |
+        ./gradlew assembleRelease --stacktrace
+        echo "⚠️ Built unsigned APK (no signing keys configured)"
+
+    - name: Build Debug APK
+      run: ./gradlew assembleDebug --stacktrace
       
-    - name: Sign Release APK
-      id: sign_app
-      continue-on-error: true
-      uses: r0adkll/sign-android-release@v1
-      with:
-        releaseDirectory: app/build/outputs/apk/release
-        signingKeyBase64: ${{ secrets.SIGNING_KEY }}
-        alias: ${{ secrets.ALIAS }}
-        keyStorePassword: ${{ secrets.KEY_STORE_PASSWORD }}
-        keyPassword: ${{ secrets.KEY_PASSWORD }}
-      env:
-        BUILD_TOOLS_VERSION: "34.0.0"
+    - name: Optimize APK with zipalign
+      run: |
+        # Find and optimize APKs
+        RELEASE_APK=$(find app/build/outputs/apk/release -name "*.apk" -type f | head -1)
+        if [ -n "$RELEASE_APK" ]; then
+          ANDROID_HOME="${ANDROID_HOME:-/usr/local/lib/android/sdk}"
+          BUILD_TOOLS_VERSION=$(ls -1 "$ANDROID_HOME/build-tools" | sort -V | tail -1)
+          ZIPALIGN="$ANDROID_HOME/build-tools/$BUILD_TOOLS_VERSION/zipalign"
+          
+          if [ -f "$ZIPALIGN" ]; then
+            ALIGNED_APK="${RELEASE_APK%.apk}-aligned.apk"
+            "$ZIPALIGN" -v 4 "$RELEASE_APK" "$ALIGNED_APK"
+            mv "$ALIGNED_APK" "$RELEASE_APK"
+            echo "✅ APK optimized with zipalign"
+          fi
+        fi
         
     - name: Get version name
       id: version
@@ -49,30 +76,41 @@ jobs:
         echo "build=${BUILD_NUMBER}" >> $GITHUB_OUTPUT
         echo "tag=v${VERSION}-build${BUILD_NUMBER}" >> $GITHUB_OUTPUT
         
-    - name: Rename APK files
+    - name: Rename and prepare APK files
       run: |
         VERSION=${{ steps.version.outputs.version }}
         BUILD=${{ steps.version.outputs.build }}
         
         # Rename Debug APK
         if [ -f "app/build/outputs/apk/debug/app-debug.apk" ]; then
-          mv app/build/outputs/apk/debug/app-debug.apk app/build/outputs/apk/debug/HSRGraphicDroid-v${VERSION}-build${BUILD}-debug.apk
+          mv app/build/outputs/apk/debug/app-debug.apk "app/build/outputs/apk/debug/HSRGraphicDroid-v${VERSION}-build${BUILD}-debug.apk"
           echo "✅ Debug APK renamed"
         fi
         
-        # Rename Release APK (unsigned)
-        if [ -f "app/build/outputs/apk/release/app-release-unsigned.apk" ]; then
-          mv app/build/outputs/apk/release/app-release-unsigned.apk app/build/outputs/apk/release/HSRGraphicDroid-v${VERSION}-build${BUILD}-release-unsigned.apk
-          echo "✅ Release Unsigned APK renamed"
+        # Handle Release APK (signed or unsigned)
+        if [ -f "app/build/outputs/apk/release/app-release.apk" ]; then
+          mv app/build/outputs/apk/release/app-release.apk "app/build/outputs/apk/release/HSRGraphicDroid-v${VERSION}-build${BUILD}-release.apk"
+          echo "✅ Signed Release APK renamed"
+        elif [ -f "app/build/outputs/apk/release/app-release-unsigned.apk" ]; then
+          mv app/build/outputs/apk/release/app-release-unsigned.apk "app/build/outputs/apk/release/HSRGraphicDroid-v${VERSION}-build${BUILD}-release-unsigned.apk"
+          echo "⚠️ Unsigned Release APK renamed"
         fi
         
-        # Copy signed APK if signing was successful
-        if [ -f "${{ steps.sign_app.outputs.signedReleaseFile }}" ]; then
-          cp ${{ steps.sign_app.outputs.signedReleaseFile }} app/build/outputs/apk/release/HSRGraphicDroid-v${VERSION}-build${BUILD}-release-signed.apk
-          echo "✅ Release Signed APK copied"
-        else
-          echo "⚠️ Signed APK not available, will upload unsigned version"
-        fi
+        # Show APK sizes
+        echo ""
+        echo "📦 APK Sizes:"
+        ls -lh app/build/outputs/apk/debug/*.apk 2>/dev/null || true
+        ls -lh app/build/outputs/apk/release/*.apk 2>/dev/null || true
+        
+    - name: Delete old pre-releases
+      uses: dev-drprasad/delete-older-releases@v0.3.4
+      if: github.event_name == 'push'
+      with:
+        keep_latest: 5
+        delete_tags: true
+        delete_prerelease_only: true
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
     - name: Create Pre-Release
       uses: softprops/action-gh-release@v1
@@ -89,14 +127,17 @@ jobs:
           **Branch:** ${{ github.ref_name }}
           
           ### 📦 Downloads
-          - **Debug APK**: For testing with detailed logs (recommended for development)
-          - **Release APK**: Optimized production build
+          - **Release APK**: Optimized & signed production build ✅
+          - **Debug APK**: For testing with detailed logs
           
-          > ⚠️ **Note**: APK is unsigned. You need to sign it manually or install with allowing unknown sources.
+          ### ✨ Optimizations Applied
+          - ✅ R8/ProGuard minification enabled
+          - ✅ Resource shrinking enabled  
+          - ✅ APK signed & zipaligned
+          - ✅ Unused code removed
           
           ### ⚠️ Pre-Release Notice
           This is an automated pre-release build. It may contain bugs or unstable features.
-          Use at your own risk!
           
           ### 📝 Recent Changes
           ${{ github.event.head_commit.message }}
@@ -107,7 +148,7 @@ jobs:
         prerelease: true
         files: |
           app/build/outputs/apk/debug/HSRGraphicDroid-*.apk
-          app/build/outputs/apk/release/HSRGraphicDroid-*-release-*.apk
+          app/build/outputs/apk/release/HSRGraphicDroid-*.apk
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         
@@ -125,16 +166,25 @@ jobs:
         path: app/build/outputs/apk/release/*.apk
         retention-days: 90
         
+    - name: Cleanup keystore
+      if: always()
+      run: rm -f app/keystore.jks
+        
     - name: Build Summary
       if: always()
       run: |
-        echo "## Build Summary" >> $GITHUB_STEP_SUMMARY
+        echo "## 📊 Build Summary" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
-        echo "- **Version:** ${{ steps.version.outputs.version }}" >> $GITHUB_STEP_SUMMARY
-        echo "- **Build:** ${{ steps.version.outputs.build }}" >> $GITHUB_STEP_SUMMARY
-        echo "- **Tag:** ${{ steps.version.outputs.tag }}" >> $GITHUB_STEP_SUMMARY
-        echo "- **Commit:** ${{ github.sha }}" >> $GITHUB_STEP_SUMMARY
-        echo "- **Branch:** ${{ github.ref_name }}" >> $GITHUB_STEP_SUMMARY
+        echo "| Property | Value |" >> $GITHUB_STEP_SUMMARY
+        echo "|----------|-------|" >> $GITHUB_STEP_SUMMARY
+        echo "| Version | ${{ steps.version.outputs.version }} |" >> $GITHUB_STEP_SUMMARY
+        echo "| Build | ${{ steps.version.outputs.build }} |" >> $GITHUB_STEP_SUMMARY
+        echo "| Tag | ${{ steps.version.outputs.tag }} |" >> $GITHUB_STEP_SUMMARY
+        echo "| Commit | \`${{ github.sha }}\` |" >> $GITHUB_STEP_SUMMARY
+        echo "| Branch | ${{ github.ref_name }} |" >> $GITHUB_STEP_SUMMARY
         echo "" >> $GITHUB_STEP_SUMMARY
-        echo "### 📦 Build Artifacts" >> $GITHUB_STEP_SUMMARY
-        echo "Debug and Release APKs have been uploaded!" >> $GITHUB_STEP_SUMMARY
+        echo "### 📦 APK Sizes" >> $GITHUB_STEP_SUMMARY
+        echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
+        ls -lh app/build/outputs/apk/debug/*.apk 2>/dev/null >> $GITHUB_STEP_SUMMARY || true
+        ls -lh app/build/outputs/apk/release/*.apk 2>/dev/null >> $GITHUB_STEP_SUMMARY || true
+        echo "\`\`\`" >> $GITHUB_STEP_SUMMARY
