feat: Add Open Config Path GUI and reduce debug APK size
- Add configPath detection logic to HsrGameManager prioritize data_mirror for Android 11+ compatibility.
- Expose config path to HomeScreen using MainViewModel StatusState.
- Add an Intent.ACTION_VIEW shortcut on HomeScreen to rapidly open raw playerprefs.xml in a root editor, adding an automatic clipboard-copy fallback.
- Optimize debug APK size by applying R8 fullmode and enabling minify/shrink resources for debug variant.
- Drop unused androidx.lifecycle:lifecycle-livedata-ktx dependency.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:name=".ui.MainActivity"
             android:exported="true"
             android:configChanges="locale|layoutDirection"
-            android:theme="@style/Theme.HsrGraphicDroid">
+            android:theme="@style/Theme.HsrGraphicDroid.Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
