--- a/gradle.properties
+++ b/gradle.properties
@@ -24,6 +24,9 @@ kotlin.code.style=official
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
 
+# R8 Optimization
+android.enableR8.fullMode=true
+
 # Configuration Cache
 # Enable configuration cache for faster builds
 org.gradle.configuration-cache=true
