refactor: replace ImageVector with Painter and use local drawable icons
- Remove material-icons-extended dependency (app size reduction)
- Replace all Icons.Default.* with painterResource(R.drawable.ic_*) across:
  CommonComponents, HomeScreen, SettingsScreen, GamePrefsScreen,
  GraphicsScreen, MainNavigation
- Refactor Screen sealed class to use iconRes instead of ImageVector
- Create 18 new drawable XML icon resources
- Add resourceConfigurations to strip unused language resources
- Enable R8 full mode optimization

--- a/gradle.properties
+++ b/gradle.properties
@@ -26,6 +26,7 @@ android.nonTransitiveRClass=true
 
 # R8 Optimization
 android.enableR8.fullMode=true
+android.enableR8.optimize=true
 
 # Configuration Cache
 # Enable configuration cache for faster builds
